[minor] change IP settings for production, add music start/stop logging

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": "/index.html",
   "display": "fullscreen",
-  "orientation": "landscape",
+  "orientation": "portrait",
   "background_color": "black"
 }
